# memwatch

./: .gitignore  Cargo.toml  IMPLEMENTATION_NOTES.md  Makefile  README.md  build.sh  create_icon.sh  install.sh  memwatch.icns  package.sh
src/: hotkey.rs  ipc.rs  killer.rs  main.rs  metrics.rs  settings.rs  ui.rs
