[package]
name = "memwatch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memwatch"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_plot = "0.29"
egui_extras = "0.29"
sysinfo = "0.32"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
